--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Competitive Programming 101" />
     <meta property="og:description" content="Start your journey in competitive programming with resources, problems, and solutions." />
     <meta property="og:image" content="https://github.com/your-username/your-repo-name/blob/main/assets/banner-image.jpg?raw=true" />
-    <meta property="og:url" content="https://your-username.github.io/your-repo-name/" />
+    <meta property="og:url" content="https://github.com/CODE-ESI-CLUB/Competitive-Programming-101" />
     <meta property="og:type" content="website" />
 </head>
 <body>
